fixed hex segmentation fault. but now we need to fix the game play

--- a/Part B/hex/CMakeLists.txt
+++ b/Part B/hex/CMakeLists.txt
@@ -7,3 +7,6 @@ include_directories(${GTEST_INCLUDE_DIRS})
 # Link runTests with what we want to test and the GTest and pthread library
 add_executable(runTests board.cpp boardTest.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
+
+add_executable(play board.cpp play.cpp)
+target_link_libraries(play pthread)
